# cli

./: .editorconfig  .env  .gitignore  .kinsiderc  MANIFEST.in  README.md  domains.json  new-domain.py  ports.json  projects.json  pyproject.toml  requirements.txt  setup.py  template.conf
docs/: Глобальное-состояние-и-файлы-конфигурации.md  Работа-с-доменными-именами(domain).md  Работа-с-портами(ports).md  Управление-конфигурацией(config).md  Управление-проектами(project).md
src/config/: __init__.py  __main__.py  cli.py  config.py  constants.py  default.json  handlers.py  lib.py  types.py
src/config/templates/: domains.json
src/domain/: __main__.py  certificates.py  cli.py  config.py  nginx.py  template.conf  types.py
src/domainmanager/: __main__.py  certificates.py  cli.py  nginx.py  sources.py
src/kinsidectl/: __main__.py  cli.py
src/ports/: __init__.py  __main__.py  cli.py  config.py  handlers.py  lib.py  types.py
src/project/: __init__.py  __main__.py  cli.py  config.py  handlers.py  lib.py  types.py
src/shared/config/: __init__.py  paths.py
src/shared/configs/base_config_file/: __init__.py  base_config_file.py  base_json_config_file.py
src/shared/configs/default/: __init__.py  config.py  types.py
src/shared/configs/domains/: __init__.py  config.py  domains_config.py  types.py
src/shared/configs/env/: __init__.py  config.py  env_config.py  env_config_file.py  lib.py  types.py
src/shared/configs/ports/: __init__.py  config.py  ports_config.py  (+1 more)
src/shared/lib/: __init__.py  access.py  files.py
templates/: .kinsiderc  domains.json  ports.json
(+5 files in other folders)
