[project]
name = "kinsidectl"
description = "Инструмент для управления сервером и проектами платформы KInside"
version = "0.1.0"
readme="README.md"
authors=[{ name = "Jora" }, { name = "Bricks666" }]
dependencies = [
	"click >= 8.1.3",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/KTEP-inside/cli"

[project.scripts]
kinsidectl = "kinsidectl.__main__:main"
